--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -9,7 +9,8 @@
 $include-html-off-canvas-classes: $include-html-classes !default;
 
 $sidenav-width: rem-calc(48) !default;
-$sidenav-height: 100%;
+//$sidenav-height: 100%;
+$sidenav-height: 100vh;
 
 $tabbar-bg: #333 !default;
 $tabbar-height: rem-calc(45) !default;
@@ -105,19 +106,20 @@ $menu-slide: "transform 500ms ease" !default;
   @include kill-flicker;
   * { @include kill-flicker; }
   width: $off-canvas-width;
-  top: 0;
-  bottom: 0;
+  height: 100%;
+  //top: 0;
+  //bottom: 0;
   position: absolute;
   overflow-y: auto;
   //background: $off-canvas-bg;
   z-index: 1001;
   box-sizing: border-box;
-  transition: #{$menu-slide};
+  //transition: #{$menu-slide};
   -webkit-overflow-scrolling: touch;
   @if $position == left {
     @include translate3d(-100%,0,0);
-    left: 0;
-	background: $left-sidenav-bg;
+    //left: 0;
+	//background: $left-sidenav-bg;
 	//padding-left: rem-calc(48);
   }
   @if $position == right {
@@ -148,6 +150,7 @@ $menu-slide: "transform 500ms ease" !default;
   -ms-transition: -ms-#{$menu-slide};
   -o-transition: -o-#{$menu-slide};
   transition: #{$menu-slide};
+  will-change: transform;
 }
 
 // TAB BAR
@@ -349,7 +352,7 @@ $menu-slide: "transform 500ms ease" !default;
 	.move-right .left-sidenav {
 		//transform: translate3d( -$off-canvas-width, 0, 0);
 		//transform: translate3d( $sidenav-width / 2, 0, 0);
-		transition: #{$menu-slide};
+		//transition: #{$menu-slide};
 		
 		.menu-icon {
 			transform: translate3d(1.5rem, 0px, 0px);
@@ -360,16 +363,16 @@ $menu-slide: "transform 500ms ease" !default;
 	
 	.sidenav .menu-icon {
 		width: $sidenav-width;
-		height: 100%;
+		height: 100vh;
 		display: block;
 		padding: $tabbar-menu-icon-padding;
 		color: #333;
-		position: absolute;
+		position: relative;
 		//transform: translate3d(0,0,0);
-		transition: #{$menu-slide};
+		//transition: #{$menu-slide};
 		text-align: center;
 		outline: none;
-
+		will-change: transform;
 
       // @include for the hamburger menu-icon
       //
@@ -385,11 +388,16 @@ $menu-slide: "transform 500ms ease" !default;
       @include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, $tabbar-menu-icon-color, $tabbar-menu-icon-hover, true);
 	  
 	  .icon-container {	  
-		position: fixed;		
+		position: relative;		
 		//transition: #{$menu-slide};
 		height: rem-calc(48);
 		width: rem-calc(48);
-		margin-top: -(rem-calc(48) / 2);
+		//margin-top: -(rem-calc(48) / 2);
+		transform: translate3d(0, 50vh, 0);
+		
+			img {
+				transform: translate3d(0, -24px, 0);
+			}
 	  }
     }
 	
