--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -405,6 +405,8 @@ figure.effect-lily {
 		text-shadow: 0px 0px 5px #000;
 		cursor: pointer;
 		z-index: 1001;
+		float: left;
+		width: 100%;
 		//@include animation('pulse 3s infinite');
 		
 		&:hover {
