--- a/scss/foundation/components/_type.scss
+++ b/scss/foundation/components/_type.scss
@@ -25,22 +25,48 @@ $h4-font-size: rem-calc(20) !default;
 $h5-font-size: rem-calc(18) !default;
 $h6-font-size: 1rem !default;
 */
-
 /*
-$h1-font-size: 4.236rem !default;
-$h2-font-size: 2.618rem !default;
-$h3-font-size: 1.618rem !default;
-$h4-font-size: 1.214rem !default;
-$h5-font-size: 1rem !default;
-$h6-font-size: 0.75rem !default;
-*/
-
 $h1-font-size: 2.618rem !default;
 $h2-font-size: 1.963rem !default;
 $h3-font-size: 1.618rem !default;
 $h4-font-size: 1.214rem !default;
+*/
 $h5-font-size: 1rem !default;
 $h6-font-size: 0.75rem !default;
+
+$base-font-size: 1rem;
+$base-line-height: 1.625rem;
+$measure: 760px;
+
+$h1-font-size: 4.25rem;
+$h1-line: 1.625rem;
+$h1-lines: 3;
+$h1-line-height: $h1-line * $h1-lines;
+$h1-margin-top: 1 * $h1-line;
+$h1-margin-bottom: 1 * $h1-line;
+
+$h2-font-size: 2.625rem;
+$h2-line: 1.625rem;
+$h2-lines: 2;
+$h2-line-height: $h2-line * $h2-lines;
+$h2-margin-top: 1 * $h2-line;
+$h2-margin-bottom: 1 * $h2-line;
+
+$h3-font-size: 1.625rem;
+$h3-line: 1.625rem;
+$h3-lines: 1;
+$h3-line-height: $h3-line * $h3-lines;
+$h3-margin-top: 1 * $h3-line;
+$h3-margin-bottom: 1 * $h3-line;
+
+$h4-font-size: 1rem;
+$h4-line: 1.625rem;
+$h4-lines: 1;
+$h4-line-height: $h4-line * $h4-lines;
+$h4-margin-top: 1 * $h4-line;
+$h4-margin-bottom: 1 * $h4-line;
+
+
 
 // We use these to control header size reduction on small screens
 $h1-font-reduction: rem-calc(10) !default;
@@ -259,8 +285,8 @@ $align-class-breakpoints:
     p {
       font-family: $paragraph-font-family;
       font-weight: $paragraph-font-weight;
-      font-size: $paragraph-font-size;
-      line-height: $paragraph-line-height;
+      font-size: $base-font-size;
+      line-height: $base-line-height;
       margin-bottom: $paragraph-margin-bottom;
       text-rendering: $paragraph-text-rendering;
 
@@ -284,10 +310,11 @@ $align-class-breakpoints:
       font-style: $header-font-style;
       color: $header-font-color;
       text-rendering: $header-text-rendering;
+	  /*
       margin-top: $header-top-margin;
       margin-bottom: $header-bottom-margin;
       line-height: $header-line-height;
-
+	*/
       small {
         font-size: $small-font-size;
         color: $small-font-color;
@@ -483,11 +510,31 @@ $align-class-breakpoints:
 
 
     @media #{$medium-up} {
-		h1,h2,h3,h4,h5,h6 { line-height: $header-line-height; }
-		h1, .h1 { font-size: $h1-font-size; }
-		h2, .h2 { font-size: $h2-font-size; }
-		h3, .h3 { font-size: $h3-font-size; }
-		h4, .h4 { font-size: $h4-font-size; }
+		//h1,h2,h3,h4,h5,h6 { line-height: $header-line-height; }
+		h1, .h1 { 
+			font-size: $h1-font-size; 
+			line-height: $h1-line-height;
+			margin-top: $h1-margin-top;
+			margin-bottom: $h1-margin-bottom;
+		}
+		h2, .h2 { 
+			font-size: $h2-font-size; 
+			line-height: $h2-line-height;
+			margin-top: $h2-margin-top;
+			margin-bottom: $h2-margin-bottom;
+		}
+		h3, .h3 { 
+			font-size: $h3-font-size; 
+			line-height: $h3-line-height;
+			margin-top: $h3-margin-top;
+			margin-bottom: $h3-margin-bottom;
+		}
+		h4, .h4 { 
+			font-size: $h4-font-size; 
+			line-height: $h4-line-height;
+			margin-top: $h4-margin-top;
+			margin-bottom: $h4-margin-bottom;
+		}
 		h5, .h5 { font-size: $h5-font-size; }
 		h6, .h6 { font-size: $h6-font-size; }
 
