--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -39,7 +39,7 @@
 		min-width: 100%;
 	}
 	.main-section {
-		margin-right: -15px;
+		//margin-right: -15px;
 		
 		@media #{$small-only} {
 			padding: 0;
