--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -107,23 +107,26 @@ $menu-slide: "transform 500ms ease" !default;
   * { @include kill-flicker; }
   width: $off-canvas-width;
   height: 100%;
-  //top: 0;
-  //bottom: 0;
-  position: absolute;
+  height: 100vh;
+  top: 0;
+  bottom: 0;
+  position: fixed;
   overflow-y: auto;
   //background: $off-canvas-bg;
-  z-index: 1001;
+  z-index: 1;
   box-sizing: border-box;
   //transition: #{$menu-slide};
   -webkit-overflow-scrolling: touch;
+
+	
   @if $position == left {
-    @include translate3d(-100%,0,0);
-    //left: 0;
+    //@include translate3d(-100%,0,0);
+    left: 0;
 	//background: $left-sidenav-bg;
 	//padding-left: rem-calc(48);
   }
   @if $position == right {
-    @include translate3d(100%,0,0);
+    //@include translate3d(100%,0,0);
     right: 0;
 	background: $right-sidenav-bg;
   }
@@ -133,8 +136,10 @@ $menu-slide: "transform 500ms ease" !default;
 // Wrap visible content and prevent scroll bars
 @mixin off-canvas-wrap {
   @include kill-flicker;
-  //@include wrap-base;
+  @include wrap-base;
   overflow: hidden;
+  position: relative;
+  z-index: 2;
   &.move-right,
   &.move-left { height: 100%; -webkit-overflow-scrolling: touch; }
 }
@@ -145,6 +150,7 @@ $menu-slide: "transform 500ms ease" !default;
   @include kill-flicker;
   @include wrap-base;
   @include clearfix;
+  background: $body-bg;
   -webkit-transition: -webkit-#{$menu-slide};
   -moz-transition: -moz-#{$menu-slide};
   -ms-transition: -ms-#{$menu-slide};
@@ -329,7 +335,7 @@ $menu-slide: "transform 500ms ease" !default;
 @include exports("offcanvas") {
   @if $include-html-off-canvas-classes {
 
-    .off-canvas-wrap { @include off-canvas-wrap; height: 100%;}
+    .off-canvas-wrap { @include off-canvas-wrap; height: 100%; }
     .inner-wrap { @include inner-wrap; }
 	
 	.main-section {
@@ -337,6 +343,10 @@ $menu-slide: "transform 500ms ease" !default;
 		overflow-y: auto;
 		height: 100%;
 		padding: 0 $sidenav-width;
+		
+		&::-webkit-scrollbar {
+			width: 0;
+		}
 	}
 
     .tab-bar { @include tab-bar-base; }
@@ -440,7 +450,8 @@ $menu-slide: "transform 500ms ease" !default;
     ul.off-canvas-list { @include off-canvas-list; }
 	
 	.vertical-center {		
-		height: 100%;		
+		height: 100%;
+		height: 100vh;
 		display: table;
 		
 		ul.off-canvas-list {
