--- a/scss/foundation/components/_type.scss
+++ b/scss/foundation/components/_type.scss
@@ -38,14 +38,14 @@ $base-font-size: 1rem;
 $base-line-height: 1.625rem;
 $measure: 760px;
 
-$h1-font-size: 4.25rem;
+$h1-font-size: 2.625rem;
 $h1-line: 1.625rem;
 $h1-lines: 3;
 $h1-line-height: $h1-line * $h1-lines;
 $h1-margin-top: 1 * $h1-line;
 $h1-margin-bottom: 1 * $h1-line;
 
-$h2-font-size: 2.625rem;
+$h2-font-size: 1.625rem;
 $h2-line: 1.625rem;
 $h2-lines: 2;
 $h2-line-height: $h2-line * $h2-lines;
@@ -321,22 +321,31 @@ $align-class-breakpoints:
         line-height: 0;
       }
     }
-
-	/*
-    h1, .h1 { font-size: $h1-font-size - $h1-font-reduction; }
-    h2, .h2 { font-size: $h2-font-size - $h2-font-reduction; }
-    h3, .h3 { font-size: $h3-font-size - $h3-font-reduction; }
-    h4, .h4 { font-size: $h4-font-size - $h4-font-reduction; }
-    h5, .h5 { font-size: $h5-font-size - $h5-font-reduction; }
-    h6, .h6 { font-size: $h6-font-size - $h6-font-reduction; }
-	*/
 	
-	h1, .h1 { font-size: $h2-font-size; }
-    h2, .h2 { font-size: $h3-font-size; }
-    h3, .h3 { font-size: $h4-font-size; }
-    h4, .h4 { font-size: $h5-font-size; }
-    h5, .h5 { font-size: $h6-font-size; }
-    h6, .h6 { font-size: $h6-font-size; }
+	h1, .h1 { 
+		font-size: $h1-font-size; 
+		line-height: $h1-line-height;
+		margin-top: $h1-margin-top / 2;
+		margin-bottom: $h1-margin-bottom / 2;
+	}
+	h2, .h2 { 
+		font-size: $h2-font-size; 
+		line-height: $h2-line-height;
+		margin-top: $h2-margin-top / 2;
+		margin-bottom: $h2-margin-bottom / 2;
+	}
+	h3, .h3 { 
+		font-size: $h3-font-size; 
+		line-height: $h3-line-height;
+		margin-top: $h3-margin-top / 2;
+		margin-bottom: $h3-margin-bottom / 2;
+	}
+	h4, .h4 { 
+		font-size: $h4-font-size; 
+		line-height: $h4-line-height;
+		margin-top: $h4-margin-top / 2;
+		margin-bottom: $h4-margin-bottom / 2;
+	}
 
     .subheader { @include subheader; }
 
@@ -509,8 +518,7 @@ $align-class-breakpoints:
     }
 
 
-    @media #{$medium-up} {
-		//h1,h2,h3,h4,h5,h6 { line-height: $header-line-height; }
+    @media #{$medium-up} {		
 		h1, .h1 { 
 			font-size: $h1-font-size; 
 			line-height: $h1-line-height;
