--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -72,7 +72,8 @@ $off-canvas-overlay-background: rgba(#000, 0.75) !default;
 $off-canvas-overlay-background-hover: rgba(#000, 0.15) !default;
 
 // Transition Variables
-$menu-slide: "transform 320ms ease-in-out" !default;
+$menu-slide: "transform 500ms ease" !default;
+//$menu-slide: "all 500ms ease" !default;
 
 
 // MIXINS
@@ -102,38 +103,33 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 
 // basic styles for off-canvas menu container
 @mixin off-canvas-menu($position) {
-	@include kill-flicker;
-	* { @include kill-flicker; }
-	width: $off-canvas-width;
-	height: 100%;
-	//height: 100vh;
-	top: 0;
-	bottom: 0;
-	position: fixed;
-	overflow-y: auto;
-	//background: $off-canvas-bg;
-	z-index: 1;
-	box-sizing: border-box;  
-	-webkit-overflow-scrolling: touch;
-
-	//transition: #{$menu-slide};
-	//visibility: hidden;
-	//will-change: transform;
-	
-	@media #{$small-only} {
-		padding-top: $h2-line-height;
-	}
+  @include kill-flicker;
+  * { @include kill-flicker; }
+  width: $off-canvas-width;
+  height: 100%;
+  height: 100vh;
+  top: 0;
+  bottom: 0;
+  position: fixed;
+  overflow-y: auto;
+  //background: $off-canvas-bg;
+  z-index: 1;
+  box-sizing: border-box;
+  //transition: #{$menu-slide};
+  -webkit-overflow-scrolling: touch;
 
 	
-	@if $position == left {
-		@include translate3d(-100%,0,0);
-		left: 0;
-	}
-	@if $position == right {
-		@include translate3d(100%,0,0);
-		right: 0;
-		background: $right-sidenav-bg;
-	}
+  @if $position == left {
+    //@include translate3d(-100%,0,0);
+    left: 0;
+	//background: $left-sidenav-bg;
+	//padding-left: rem-calc(48);
+  }
+  @if $position == right {
+    //@include translate3d(100%,0,0);
+    right: 0;
+	background: $right-sidenav-bg;
+  }
 }
 
 // OFF CANVAS WRAP
@@ -143,9 +139,9 @@ $menu-slide: "transform 320ms ease-in-out" !default;
   @include wrap-base;
   overflow: hidden;
   position: relative;
-  //z-index: 2;
+  z-index: 2;
   &.move-right,
-  &.move-left { -webkit-overflow-scrolling: touch; }
+  &.move-left { height: 100%; -webkit-overflow-scrolling: touch; }
 }
 
 // INNER WRAP
@@ -154,7 +150,7 @@ $menu-slide: "transform 320ms ease-in-out" !default;
   @include kill-flicker;
   @include wrap-base;
   @include clearfix;
-  //background: $body-bg;
+  background: $body-bg;
   -webkit-transition: -webkit-#{$menu-slide};
   -moz-transition: -moz-#{$menu-slide};
   -ms-transition: -ms-#{$menu-slide};
@@ -234,30 +230,23 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 // SIDENAV
 
 @mixin sidenav-section($position) {
-  width: $h2-line-height;
-  height: $h2-line-height;
-  position: relative;
+  width: $sidenav-width;
+  height: $sidenav-height;
+  position: fixed;
   top: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 1003;
   outline: 0;
-  
-  @media #{$medium-up} {
-	position: fixed;
-	width: $sidenav-width;
-	height: $sidenav-height;
-  }
-  
   @if $position == left {
     left: 0;
-	float: left;
+	background: #fff;
+	background: rgba(255,255,255,0.25);
   }
-  @if $position == right {    
+  @if $position == right {
+    //border-left: $tabbar-right-section-border;
+    // box-shadow: -1px 0 0 scale-color($tabbar-bg, $lightness: -50%);
     right:0;
-	float: right;
-	@media #{$medium-up} {
-		background: #333;
-	}
+	background: #333;
   }
 }
 
@@ -318,22 +307,26 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 @mixin back-link {
     @include kill-flicker;
 
-    //transition: $off-canvas-overlay-transition;
-    cursor: $off-canvas-overlay-cursor;    
+    transition: $off-canvas-overlay-transition;
+    cursor: $off-canvas-overlay-cursor;
+    //box-shadow: $off-canvas-overlay-box-shadow;
 
     // fill the screen
     display: block;
-	visibility: visible;
     position: absolute;
-    //background: $off-canvas-overlay-background;
-	background: #000;
-	opacity: 0.75;
+    background: $off-canvas-overlay-background;
     top: 0;
     bottom: 0;
     left:0;
     right:0;
     z-index: 1002;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+    @media #{$medium-up} {
+      &:hover {
+        background: $off-canvas-overlay-background-hover;
+      }
+    }
 }
 
 //
@@ -342,19 +335,7 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 @include exports("offcanvas") {
   @if $include-html-off-canvas-classes {
 
-    .off-canvas-wrap { @include off-canvas-wrap; }
-	.off-canvas-menu {
-		position: fixed;
-		z-index: 9998;
-		pointer-events: none;
-		
-		
-		
-		&.move-left,
-		&.move-right {
-			pointer-events: initial;
-		}
-	}
+    .off-canvas-wrap { @include off-canvas-wrap; height: 100%; }
     .inner-wrap { @include inner-wrap; }
 	
 	.main-section {
@@ -380,13 +361,16 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 	.left-sidenav { @include sidenav-section($position: left); }
 	.move-right .left-sidenav {
 		background: #fff;
+		.menu-icon {
+			transform: translate3d(1.5rem, 0px, 0px);
+		}
 	}
 	
 	.right-sidenav { 
 		@include sidenav-section($position: right); 
 		
 		@media #{$small-only} {
-			//background: rgba(51, 51, 51, 0.75);
+			background: rgba(51, 51, 51, 0.75);
 		}
 	}
 	
@@ -396,14 +380,14 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 	
 	.sidenav .menu-icon {
 		width: $sidenav-width;
-		height: 100%;
+		height: 100vh;
 		display: block;
 		padding: $tabbar-menu-icon-padding;
 		color: #333;
 		position: relative;
 		text-align: center;
 		outline: none;
-		
+		will-change: transform;
 
       // @include for the hamburger menu-icon
       //
@@ -419,26 +403,16 @@ $menu-slide: "transform 320ms ease-in-out" !default;
       @include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, $tabbar-menu-icon-color, $tabbar-menu-icon-hover, true);
 	  
 	  .icon-container {	  
-		position: relative;			
-		height: $h2-line-height;
-		width: $h2-line-height;
-		padding: 2px 0;
-		
-		@media #{$medium-up} {
-			transform: translate3d(0, 50vh, 0);
+		position: relative;		
+		//transition: #{$menu-slide};
+		height: rem-calc(48);
+		width: rem-calc(48);
+		//margin-top: -(rem-calc(48) / 2);
+		transform: translate3d(0, 50vh, 0);
 		
 			img {
-				transform: translate3d(0, -$h2-line-height / 2, 0);
+				transform: translate3d(0, -1.5rem, 0);
 			}
-		}
-		
-		@media #{$small-only} {
-			@include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, #333, $tabbar-menu-icon-hover, true);
-			
-			span:after {
-				transform: translate3d(0, $h2-line-height / 2, 0);
-			}
-		}
 	  }
     }
 	
@@ -477,7 +451,7 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 	
 	.vertical-center {		
 		height: 100%;
-		//height: 100vh;
+		height: 100vh;
 		display: table;
 		
 		ul.off-canvas-list {
@@ -491,35 +465,19 @@ $menu-slide: "transform 320ms ease-in-out" !default;
 
     // ANIMATION CLASSES
     // These classes are added with JS and trigger the actual animation.
-	
-	.exit-off-canvas {
-		@include back-link;
-		display: hidden;
-		visibility: hidden;
-	}
-	
     .move-right {
-		> .inner-wrap {
-			@include translate3d($off-canvas-width,0,0);
-		}
-
-		.left-off-canvas-menu {
-			//@include translate3d(0,0,0);
-		}
-
-		.exit-off-canvas { @include back-link;}
+      > .inner-wrap {
+        @include translate3d($off-canvas-width,0,0);
+      }
+      .exit-off-canvas { @include back-link;}
     }
 
     .move-left {
-		> .inner-wrap {
-			@include translate3d(-($off-canvas-width),0,0);
-		}
-		  
-		.right-off-canvas-menu {
-			//@include translate3d(0,0,0);
-		 }
-		  
-		.exit-off-canvas { @include back-link; }
+      > .inner-wrap {
+        @include translate3d(-($off-canvas-width),0,0);
+
+      }
+      .exit-off-canvas { @include back-link; }
     }
     .offcanvas-overlap {
       .left-off-canvas-menu, .right-off-canvas-menu {
