--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@
 @import
   "foundation",
   "style/aspect-ratio",
-  "style/content",
   "style/onepage-scroll",
-  "style/media-object";
+  "style/media-object",
+  "style/content";
   
