--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -8,7 +8,8 @@
 // Off Canvas Tab Bar Variables
 $include-html-off-canvas-classes: $include-html-classes !default;
 
-$sidenav-width: rem-calc(48) !default;
+//$sidenav-width: rem-calc(48) !default;
+$sidenav-width: $h2-line-height !default;
 //$sidenav-height: 100%;
 $sidenav-height: 100vh;
 
@@ -31,9 +32,10 @@ $tabbar-header-margin: 0 !default;
 
 // Off Canvas Menu Variables
 $off-canvas-width: rem-calc(284) !default;
-$off-canvas-bg: #333 !default;
+$off-canvas-bg: #FFF !default;
 $left-sidenav-bg: rgba(#FFF, 0.25) !default;
-$right-sidenav-bg: #333 !default;
+//$right-sidenav-bg: #333 !default;
+$right-sidenav-bg: rgba(#FFF, 0.25) !default;
 
 // Off Canvas Menu List Variables
 $off-canvas-label-padding: 0.3rem rem-calc(15) !default;
@@ -46,11 +48,11 @@ $off-canvas-label-border-top: 1px solid scale-color($off-canvas-label-bg, $light
 $off-canvas-label-border-bottom: none !default;
 $off-canvas-label-margin:0 !default;
 $off-canvas-link-padding: rem-calc(10, 15) !default;
-$off-canvas-link-color: rgba(#FFF, 0.7) !default;
+$off-canvas-link-color: #333 !default;
 $off-canvas-link-border-bottom: 1px solid scale-color($off-canvas-bg, $lightness: -25%) !default;
 
 // Off Canvas Menu Icon Variables
-$tabbar-menu-icon-color: #FFF !default;
+$tabbar-menu-icon-color: #333 !default;
 $tabbar-menu-icon-hover: scale-color($tabbar-menu-icon-color, $lightness: -30%) !default;
 
 $tabbar-menu-icon-text-indent: rem-calc(35) !default;
@@ -65,11 +67,11 @@ $tapbar-hamburger-icon-thickness: 1px !default;
 $tapbar-hamburger-icon-gap: 6px !default;
 
 // Off Canvas Back-Link Overlay
-$off-canvas-overlay-transition: background 300ms ease !default;
+$off-canvas-overlay-transition: opacity 512ms ease, visibility 0s linear 512ms !default;
 $off-canvas-overlay-cursor: pointer !default;
 //$off-canvas-overlay-box-shadow: -4px 0 4px rgba(#000, 0.5), 4px 0 4px rgba(#000, 0.5) !default;
-$off-canvas-overlay-background: rgba(#000, 0.75) !default;
-$off-canvas-overlay-background-hover: rgba(#000, 0.15) !default;
+$off-canvas-overlay-background: #000 !default;
+$off-canvas-overlay-background-hover: #000 !default;
 
 // Transition Variables
 $menu-slide: "transform 512ms ease-in-out" !default;
@@ -78,17 +80,17 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 // MIXINS
 // Remove transition flicker on phones
 @mixin kill-flicker {
-  -webkit-transform: translateZ(0x);
-  transform: translateZ(0x);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
 // Basic properties for the content wraps
 @mixin wrap-base {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
 }
 
 @mixin translate3d($tx,$ty,$tz) {
@@ -110,14 +112,16 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 	top: 0;
 	bottom: 0;
 	position: fixed;
-	overflow-y: auto;
-	//background: $off-canvas-bg;
-	z-index: 1;
+	overflow-y: visible;
+	background: $off-canvas-bg;
+	z-index: 9999;
 	box-sizing: border-box;  
 	-webkit-overflow-scrolling: touch;
-
-	//transition: #{$menu-slide};
-	//visibility: hidden;
+	
+	//visibility: hidden;	
+	//transition: visibility 0s linear 512ms;
+	
+	//transition: #{$menu-slide};	
 	//will-change: transform;
 	
 	@media #{$small-only} {
@@ -128,24 +132,27 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 	@if $position == left {
 		@include translate3d(-100%,0,0);
 		left: 0;
+		background: $off-canvas-bg;
 	}
 	@if $position == right {
 		@include translate3d(100%,0,0);
 		right: 0;
-		background: $right-sidenav-bg;
+		background: $off-canvas-bg;
 	}
 }
 
 // OFF CANVAS WRAP
 // Wrap visible content and prevent scroll bars
 @mixin off-canvas-wrap {
-  @include kill-flicker;
+  //@include kill-flicker;
   @include wrap-base;
   overflow: hidden;
   position: relative;
   //z-index: 2;
+  /*
   &.move-right,
   &.move-left { -webkit-overflow-scrolling: touch; }
+  */
 }
 
 // INNER WRAP
@@ -234,30 +241,34 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 // SIDENAV
 
 @mixin sidenav-section($position) {
-  width: $h2-line-height;
-  height: $h2-line-height;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  z-index: 9999;
-  outline: 0;
+	width: $h2-line-height;
+	height: $h2-line-height;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	z-index: 9998;
+	outline: 0;
+	transform: translateZ(0);
+	
   
-  @media #{$medium-up} {
-	position: fixed;
-	width: $sidenav-width;
-	height: $sidenav-height;
-  }
-  
-  @if $position == left {
-    left: 0;
-	float: left;
-  }
-  @if $position == right {    
-    right:0;
-	float: right;
 	@media #{$medium-up} {
-		background: #333;
+		position: fixed;
+		height: 100%;
+		box-shadow: 0 0 3px 0 rgba(0,0,0,0.25);
 	}
+
+	@if $position == left {
+		left: 0;
+		float: left;
+	}
+	@if $position == right {    
+		right:0;
+		float: right;
+		/*
+		@media #{$medium-up} {
+			background: #333;
+		}
+		*/
   }
 }
 
@@ -318,15 +329,14 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 @mixin back-link {
     @include kill-flicker;
 
-    //transition: $off-canvas-overlay-transition;
+    transition: $off-canvas-overlay-transition;
     cursor: $off-canvas-overlay-cursor;    
 
     // fill the screen
     display: block;
 	visibility: visible;
     position: absolute;
-    //background: $off-canvas-overlay-background;
-	background: #000;
+    background: $off-canvas-overlay-background;
 	opacity: 0.75;
     top: 0;
     bottom: 0;
@@ -334,6 +344,7 @@ $menu-slide: "transform 512ms ease-in-out" !default;
     right:0;
     z-index: 1002;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+	
 }
 
 //
@@ -346,10 +357,8 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 	.off-canvas-menu {
 		position: fixed;
 		z-index: 9998;
-		//pointer-events: none;
-		
-		
-		
+		transform: translateZ(0);
+
 		&.move-left,
 		&.move-right {
 			pointer-events: initial;
@@ -359,7 +368,7 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 	
 	.main-section {
 		//overflow-y: scroll;
-		overflow-y: auto;
+		overflow-y: visible;
 		height: 100%;
 		padding: 0 $sidenav-width;
 		
@@ -377,21 +386,15 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 	
 	
 	// SIDEMENU	
-	.left-sidenav { @include sidenav-section($position: left); }
-	.move-right .left-sidenav {
-		background: #fff;
-	}
+	.left-sidenav { @include sidenav-section($position: left); background: $off-canvas-bg;}
 	
 	.right-sidenav { 
 		@include sidenav-section($position: right); 
+		background: $off-canvas-bg;
 		
 		@media #{$small-only} {
 			//background: rgba(51, 51, 51, 0.75);
 		}
-	}
-	
-	.move-left .right-sidenav {
-		background: #333;
 	}
 	
 	.sidenav .menu-icon {
@@ -400,7 +403,8 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 		display: block;
 		padding: $tabbar-menu-icon-padding;
 		color: #333;
-		position: relative;
+		position: fixed;
+		transform: translateZ(0);
 		text-align: center;
 		outline: none;
 		
@@ -419,21 +423,29 @@ $menu-slide: "transform 512ms ease-in-out" !default;
       @include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, $tabbar-menu-icon-color, $tabbar-menu-icon-hover, true);
 	  
 	  .icon-container {	  
-		position: relative;			
+		position: fixed;			
 		height: $h2-line-height;
 		width: $h2-line-height;
-		padding: 2px 0;
+		
+		img {
+			max-height: 100%;
+			width: auto;
+		}
+		
+		.hamburger-icon {
+			padding: 14px;
+		}
 		
 		@media #{$medium-up} {
 			transform: translate3d(0, 50vh, 0);
 		
-			img {
+			img {				
 				transform: translate3d(0, -$h2-line-height / 2, 0);
 			}
 		}
 		
 		@media #{$small-only} {
-			@include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, #333, $tabbar-menu-icon-hover, true);
+			@include hamburger($tabbar-hamburger-icon-width, $tabbar-hamburger-icon-left, $tabbar-hamburger-icon-top, $tapbar-hamburger-icon-thickness, $tapbar-hamburger-icon-gap, $tabbar-menu-icon-color, $tabbar-menu-icon-hover, true);
 			
 			span:after {
 				transform: translate3d(0, $h2-line-height / 2, 0);
@@ -441,6 +453,12 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 		}
 	  }
     }
+	
+	@media #{$small-only} {
+		.left-off-canvas-toggle .icon-container {
+			padding: 5px 0;
+		}
+	}
 	
 	
 
@@ -493,9 +511,10 @@ $menu-slide: "transform 512ms ease-in-out" !default;
     // These classes are added with JS and trigger the actual animation.
 	
 	.exit-off-canvas {
-		@include back-link;
-		display: hidden;
+		@include back-link;		
 		visibility: hidden;
+		opacity: 0;
+		@include translate3d(0,0,0);
 	}
 	
     .move-right {
@@ -505,9 +524,11 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 
 		.left-off-canvas-menu {
 			//@include translate3d(0,0,0);
+			//visibility: visible;
+			//transition-delay:0s;
 		}
 
-		.exit-off-canvas { @include back-link;}
+		.exit-off-canvas { @include back-link; transition-delay:0s;}
     }
 
     .move-left {
@@ -517,9 +538,11 @@ $menu-slide: "transform 512ms ease-in-out" !default;
 		  
 		.right-off-canvas-menu {
 			//@include translate3d(0,0,0);
+			//visibility: visible;
+			//transition-delay:0s;
 		 }
 		  
-		.exit-off-canvas { @include back-link; }
+		.exit-off-canvas { @include back-link; transition-delay:0s; }
     }
     .offcanvas-overlap {
       .left-off-canvas-menu, .right-off-canvas-menu {
@@ -529,6 +552,7 @@ $menu-slide: "transform 512ms ease-in-out" !default;
         -o-transform: none;
         transform: none;
         z-index: 1003;
+		visibility: hidden;
       }
       .exit-offcanvas-menu {
         @include back-link;
