--- a/scss/style/_onepage-scroll.scss
+++ b/scss/style/_onepage-scroll.scss
@@ -1,16 +1,18 @@
 $onepage-slide: "transform 640ms ease-in-out" !default;
 
+.disable-hover,
+.disable-hover * 
+{
+	pointer-events: none !important;
+}
+
 body, html {
   margin: 0;
   overflow: hidden;
 }
 
 body, #onepagescroll, html {
-  display: block;
-  position: static;
-  padding: 0;
-  width: 100%;
-  height: 100%;
+	height: 100%;
 }
 
 #onepagescroll {
@@ -24,77 +26,58 @@ body, #onepagescroll, html {
 	height: 100%;
 	display: block;
 	position: relative;
-	padding: 0;
-	-webkit-transform-style: preserve-3d;
+	padding: 0;	
+	transform: translate3d(0,0,0);
+	backface-visibility: hidden;
 
 	.section {
-	  width: 100%;
-	  height: 100%;
+		width: 100%;
+		height: 100%;
 	}
 }
 
 .onepage-pagination {
-  position: absolute;
-  right: 10px;
-  top: 50%;
-  z-index: 5;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	position: fixed;
+	right: 1rem;
+	top: 50%;
+	z-index: 5;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	transform: translate3d(0, -50%, 0);
+	
+	@media #{$medium-up} {
+		right: $sidenav-width + 1rem;
+	}
 }
 .onepage-pagination li {
-  padding: 0;
-  text-align: center;
+	text-align: center;
 }
 .onepage-pagination li a{
-  padding: 10px;
-  width: 4px;
-  height: 4px;
-  display: block;
+	padding: 10px;
+	width: 4px;
+	height: 4px;
+	display: block;
+	transform: translateZ(0);
   
 }
 .onepage-pagination li a:before{
-  content: '';
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background: rgba(0,0,0,0.85);
-  border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
+	content: '';
+	position: absolute;
+	width: 4px;
+	height: 4px;
+	background: #fff;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	transform: translateZ(0);
 }
 
 .onepage-pagination li a.active:before{
-  width: 10px;
-  height: 10px;
-  background: none;
-  border: 1px solid black;
-  margin-top: -4px;
-  left: 8px;
-}
-
-.disabled-onepage-scroll, .disabled-onepage-scroll .wrapper {
-  overflow: auto;
-}
-
-.disabled-onepage-scroll .onepage-wrapper .section {
-  position: relative !important;
-  top: auto !important;
-  left: auto !important;
-}
-.disabled-onepage-scroll .onepage-wrapper {
-  -webkit-transform: none !important;
-  -moz-transform: none !important;
-  transform: none !important;
-  -ms-transform: none !important;
-  min-height: 100%;
-}
-
-
-.disabled-onepage-scroll .onepage-pagination {
-  display: none;
-}
-
-body.disabled-onepage-scroll, .disabled-onepage-scroll .onepage-wrapper, html {
-  position: inherit;
+	width: 10px;
+	height: 10px;
+	background: none;
+	border: 2px solid #fff;
+	margin-top: -4px;
+	left: 8px;
 }
