--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -116,7 +116,8 @@
 	}
 
 	.post {
-		//background: none repeat scroll 0 0 #000;		
+		//background: none repeat scroll 0 0 #000;
+		height: 100%;
 		height: 100vh;
 		
 		margin: 0;
@@ -299,6 +300,7 @@
 
 
 .placeholder-container {
+	height: 100%;
 	height: 100vh;
 	background: #1b1b1b;
 	position: relative;
