--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -23,19 +23,23 @@
 }
 
 .header {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	float: left;
+	height: $h3-line-height * 2;
 	z-index: 99;
 	display: block;
 	background: $body-bg;
 	transform: translateZ(0);
-	//padding: 0 $sidenav-width;
+	padding: 0 $sidenav-width;
 	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
+	text-align: center;
+	z-index: 9997;
 	
 	@media #{$medium-up} {
+		text-align: left;
+		float: left;
 		position: relative;
 	}
 }
