--- a/scss/style/_onepage-scroll.scss
+++ b/scss/style/_onepage-scroll.scss
@@ -26,8 +26,12 @@ body, #onepagescroll, html {
 	height: 100%;
 	display: block;
 	position: relative;
-	padding: 0;	
-	transform: translate3d(0,0,0);
+	padding: 0;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
 	backface-visibility: hidden;
 
 	.section {
