--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -33,7 +33,7 @@
 	background: $body-bg;
 	transform: translateZ(0);
 	padding: 0 $sidenav-width;
-	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
+	//box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.25);
 	text-align: center;
 	z-index: 9997;
 	
@@ -41,6 +41,8 @@
 		text-align: left;
 		float: left;
 		position: relative;
+		padding: 0;
+		z-index: 9999;
 	}
 }
 
